--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,6 +14,7 @@
   </ion-header>
 
   <div id="container">
- <h3>Welcome to Mobile Apps Starter project 2023</h3>
+ <h3>Your latest status: {{myStatus}}</h3>
+ <ion-button [routerLink]="['/status']">Set Status</ion-button>
   </div>
 </ion-content>
